test/classes/nilability/nilability-bang-failure.execopts
--option=1 # nilability-bang-failure.1.good
--option=2 # nilability-bang-failure.2.good
